--- a/public/css/admin/docentes/index.css
+++ b/public/css/admin/docentes/index.css
@@ -451,8 +451,5 @@
 
 /* Pagination */
 .pagination-wrapper {
-    padding: 1.5rem;
-    border-top: 1px solid var(--border-color);
-    display: flex;
-    justify-content: center;
+    width: 100%;
 }
