--- a/public/css/admin/cursos/index.css
+++ b/public/css/admin/cursos/index.css
@@ -296,6 +296,12 @@
     font-size: 1rem;
 }
 
+.avatar-circle.course-avatar {
+    background: rgba(162, 28, 175, 0.15);
+    color: #e879f9;
+    border: 1px solid rgba(162, 28, 175, 0.3);
+}
+
 .user-info .details {
     display: flex;
     flex-direction: column;
@@ -445,8 +451,6 @@
 
 /* Pagination */
 .pagination-wrapper {
-    padding: 1.5rem;
-    border-top: 1px solid var(--border-color);
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    margin-top: 0;
 }
