--- a/public/css/admin/roles/index.css
+++ b/public/css/admin/roles/index.css
@@ -392,8 +392,6 @@
 
 /* Pagination */
 .pagination-wrapper {
-    padding: 1.5rem;
-    border-top: 1px solid var(--border-color);
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    margin-top: 0;
 }
